--- a/GomokuLogic/stylesheet.css
+++ b/GomokuLogic/stylesheet.css
@@ -1,11 +1,81 @@
-﻿div {
-    height:100px;
-    width:100px;
-    background-color:#FF0000;
-    border-radius:5px;
-    margin-bottom:5px;
+﻿*
+{
+	padding: 0;
+	border: 0;
 }
 
-#green {
-    background-color:#008800;
+
+#board
+{
+float: left;
+padding:75px;
+background-color: #5A79B1;
+border:5px solid black;
+
+}
+
+.tile
+{
+	width: 64px;
+	height: 64px;
+	float: left;
+  border:2px solid black;
+}
+
+.brown
+{
+
+	background-color: #966F33;
+  color:white;
+}
+
+#player
+{
+	width: 32px;
+	height: 32px;
+	background-color: red;
+	position: absolute;
+	border-radius: 50%;
+	z-index: 10;
+	top:39px;
+	left:39px;
+}
+
+span.icon
+{
+	display: block;
+	padding-top: 2px;
+	padding-left: 3px;
+	color:white;
+	font-size:150%;
+}
+
+.hover
+{
+	-webkit-box-shadow: inset 0px 0px 5px 5px rgba(150, 0, 0, .5);
+	box-shadow: inset 0px 0px 5px 50px rgba(150, 0, 0, .5);
+}
+
+.smoothmove
+{
+	-webkit-transition: top 0.35s ease-in-out, left 0.35s ease-in-out;
+	-moz-transition: top 0.35s ease-in-out, left 0.35s ease-in-out;
+	-ms-transition: top 0.35s ease-in-out, left 0.35s ease-in-out;
+	-o-transition: top 0.35s ease-in-out, left 0.35s ease-in-out;
+	transition: top 0.35s ease-in-out, left 0.35s ease-in-out;
+}
+
+.smoothfade
+{
+	-webkit-transition: box-shadow 0.25s ease-out;
+	-moz-transition: box-shadow 0.25s ease-out;
+	-ms-transition: box-shadow 0.25s ease-out;
+	-o-transition: box-shadow 0.25s ease-out;
+	transition: box-shadow 0.25s ease-out;
+
+	-webkit-transition: background-color 0.25s ease-in time;
+	-moz-transition: background-color 0.25s ease-in time;
+	-ms-transition: background-color 0.25s ease-in time;
+	-o-transition: background-color 0.25s ease-in time;
+	transition: background-color 0.25s ease-in time;
 }
